trabalhando na página 1

--- a/Estrutura/page2.html
+++ b/Estrutura/page2.html
@@ -3,11 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Basquete IFCM</title>
+    <title>Page 2</title>
     <link rel="stylesheet" href="../Estrutura/main.css">
     <script src="../Estrutura/server.js" defer></script>
 </head>
 <body>
+        
+    <header>
+        <img src="../Arquivos de mídia/Pega, mata e come!.jpg" alt="Basquete IFCM logo" width="1520" height="160">
+    </header>
 
+
+        <nav>
+            <a href="../Estrutura/page1.html"><b>Time</b></a>
+            <a href="../Estrutura/page2.html"><b>Page 2</b></a>
+            <a href="../Estrutura/page3.html"><b>Page 3</b></a>
+            <a href="../Estrutura/page4.html"><b>Page 4</b></a>
+        </nav>
+
+
+
+    <footer>
+            <div>
+            <p id="footertext"><b>Contato: basqueteifcm@gmail.com</b></p><br>
+
+            <p id="footertext"><b>Site desenvolvido por Mateus Pontes, informática vespertino 2025.1</b></p>
+            </div>  
+    </footer>
+
+    
 </body>
 </html>
