--- a/Estrutura/page1.html
+++ b/Estrutura/page1.html
@@ -11,16 +11,37 @@
 <body>
     
     <header>
-        <img src="../Arquivos de mídia/Pega, mata e come!.jpg" alt="Basquete IFCM logo" width="1520" height="160">
+        <img src="../Arquivos de mídia/Pega, mata e come!.jpg" alt="Basquete IFCM logo" width="1500" height="160">
     </header>
 
 
         <nav>
-            <a href="../Estrutura/page1.html"><b>Page1</b></a>
+            <a href="../Estrutura/page1.html"><b>Time</b></a>
             <a href="../Estrutura/page2.html"><b>Page 2</b></a>
             <a href="../Estrutura/page3.html"><b>Page 3</b></a>
-            <a href="../Estrutura/game.html"><b>Game</b></a>
+            <a href="../Estrutura/page4.html"><b>Page 4</b></a>
         </nav>
+
+        <h1>Bem vindo(a) ao site do time de basquete do Campus de Ceará-Mirim!</h1>
+            <h4>O site tem o intuito de levar o nosso esporte cada vez mais longe, e incentivar a prática dele no nosso campus, inspirando novos atletas a se superarem.<br>
+            O nosso esporte ainda vai ganhar muito reconhecimento, é apenas o começo de uma disnastia!</h4>
+
+        <h1>Time de 2025</h1>
+
+        <img src="../Arquivos de mídia/Membros do time/Membros - 1.jpg" alt="foto do time" width="1500">
+        <img src="../Arquivos de mídia/Membros do time/Membros - 2.jpg" alt="foto do time" width="1500">
+
+                <h1>Faça parte desta familía!</h1>
+                    <h2>Entre para o grupo do time e frequente os treinos!</h2>
+                    <a href="">Grupo do Whatsapp</a>
+
+    <footer>
+            <div>
+            <p id="footertext"><b>Contato: basqueteifcm@gmail.com</b></p><br>
+
+            <p id="footertext"><b>Site desenvolvido por Mateus Pontes, informática vespertino 2025.1</b></p>
+            </div>  
+    </footer>
 
     
 </body>
