--- a/Estrutura/page2.html
+++ b/Estrutura/page2.html
@@ -15,11 +15,35 @@
 
 
         <nav>
-            <a href="../Estrutura/page1.html"><b>Time</b></a>
-            <a href="../Estrutura/page2.html"><b>Page 2</b></a>
-            <a href="../Estrutura/page3.html"><b>Page 3</b></a>
-            <a href="../Estrutura/page4.html"><b>Page 4</b></a>
+            <a href="../Estrutura/page1.html"><b>Início</b></a>
+            <a href="../Estrutura/page2.html"><b>Equipe</b></a>
+            <a href="../Estrutura/page3.html"><b>Jogos e Resultados</b></a>
+            <a href="../Estrutura/page4.html"><b>Entre para o time</b></a>
         </nav>
+
+        <h1>Equipe de basquete IFCM</h1>
+
+            <h2>Equipe 2025</h2><br>
+            <h2>Atletas:</h2>
+                <div class="jogadores">
+    <div class="jogador">
+        <img src="../Arquivos de mídia/Jogadores/Jogador -1.jpg" alt="Jogador 1">
+        <h3>Mateus Pontes</h3>
+        <p>Armador</p>
+    </div>
+
+    <div class="jogador">
+        <img src="imagens/jogador2.jpg" alt="Jogador 2">
+        <h3>Pedro</h3>
+        <p>Ala</p>
+    </div>
+
+    <div class="jogador">
+        <img src="imagens/jogador3.jpg" alt="Jogador 3">
+        <h3>Calixto</h3>
+        <p>Pivô</p>
+    </div>
+</div>
 
 
 
