--- a/Estrutura/page3.html
+++ b/Estrutura/page3.html
@@ -15,10 +15,10 @@
 
 
         <nav>
-            <a href="../Estrutura/page1.html"><b>Time</b></a>
-            <a href="../Estrutura/page2.html"><b>Page 2</b></a>
-            <a href="../Estrutura/page3.html"><b>Page 3</b></a>
-            <a href="../Estrutura/page4.html"><b>Page 4</b></a>
+            <a href="../Estrutura/page1.html"><b>Início</b></a>
+            <a href="../Estrutura/page2.html"><b>Equipe</b></a>
+            <a href="../Estrutura/page3.html"><b>Jogos e Resultados</b></a>
+            <a href="../Estrutura/page4.html"><b>Entre para o time</b></a>
         </nav>
 
 
