--- a/Estrutura/page4.html
+++ b/Estrutura/page4.html
@@ -15,12 +15,15 @@
 
 
         <nav>
-            <a href="../Estrutura/page1.html"><b>Time</b></a>
-            <a href="../Estrutura/page2.html"><b>Page 2</b></a>
-            <a href="../Estrutura/page3.html"><b>Page 3</b></a>
-            <a href="../Estrutura/page4.html"><b>Page 4</b></a>
+            <a href="../Estrutura/page1.html"><b>Início</b></a>
+            <a href="../Estrutura/page2.html"><b>Equipe</b></a>
+            <a href="../Estrutura/page3.html"><b>Jogos e Resultados</b></a>
+            <a href="../Estrutura/page4.html"><b>Entre para o time</b></a>
         </nav>
 
+            <h1>Faça parte desta familía!</h1>
+                    <h2>Entre para o grupo do time e frequente os treinos!</h2>
+                    <a href="">Grupo do Whatsapp</a>
 
 
     <footer>
