page3 modificadas e header

--- a/Estrutura/page1.html
+++ b/Estrutura/page1.html
@@ -3,31 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Basquete IFCM</title>
+    <title>Início</title>
     <link rel="stylesheet" href="../Estrutura/main.css">
-    <link rel="icon" type="image/png" href="../Arquivos de mídia/ifrn-logo.png">
+    <link rel="icon" type="image/png" href="../Arquivos de mídia/ifrn-logo-2.png">
     <script src="../Estrutura/server.js" defer></script>
 </head>
 <body>
     
-    <header>
-        <img src="../Arquivos de mídia/Pega, mata e come!.jpg" alt="Basquete IFCM logo" width="1500" height="160">
-    </header>
-
-
+        <header>
+        <div class="banner">
+            <img src="../Arquivos de mídia/Logo -1.png" alt="Logo esquerda">
+            <h1>PEGA, MATA E COME!</h1>
+            <img src="../Arquivos de mídia/ifrn-logo.png" alt="Logo direita">
+        </div>
         <nav>
-            <a href="../Estrutura/page1.html"><b>Início</b></a>
-            <a href="../Estrutura/page2.html"><b>Equipe</b></a>
-            <a href="../Estrutura/page3.html"><b>Jogos e Resultados</b></a>
-            <a href="../Estrutura/page4.html"><b>Entre para o time</b></a>
+            <ul>
+            <li><a href="../Estrutura/page1.html">Início</a></li>
+            <li><a href="../Estrutura/page2.html">Equipe</a></li>
+            <li><a href="../Estrutura/page3.html">Jogos e Resultados</a></li>
+            <li><a href="../Estrutura/page4.html">Entre para o time</a></li>
+            </ul>
         </nav>
+        </header>
+
+        <img src="../Arquivos de mídia/Logo - 2.png" alt="Logo" height="300" width="300">
 
         <h1>Bem vindo(a) ao site do time de basquete do Campus de Ceará-Mirim!</h1>
             <h4>O site tem o intuito de levar o nosso esporte cada vez mais longe, e incentivar a prática dele no nosso campus, inspirando novos atletas a se superarem.<br>
-            O nosso esporte ainda vai ganhar muito reconhecimento, é apenas o começo de uma disnastia!</h4>
+            O nosso esporte ainda vai ganhar muito reconhecimento, é apenas o começo de uma disnastia!</h4><br><br>
 
-        <img src="../Arquivos de mídia/Membros do time/" alt="foto do time" width="1500">
-        <img src="../Arquivos de mídia/Membros do time/" alt="foto do time" width="1500">
+        <img src="../Arquivos de mídia/Membros do time/Membros - 1.jpg" alt="foto do time" width="1500">
+        <img src="../Arquivos de mídia/Membros do time/Membros - 2.jpg" alt="foto do time" width="1500">
 
 
 
