--- a/Estrutura/page3.html
+++ b/Estrutura/page3.html
@@ -3,25 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page 3</title>
+    <title>Jogos e Resultados</title>
     <link rel="stylesheet" href="../Estrutura/main.css">
     <script src="../Estrutura/server.js" defer></script>
 </head>
 <body>
         
     <header>
-        <img src="../Arquivos de mídia/Pega, mata e come!.jpg" alt="Basquete IFCM logo" width="1520" height="160">
+    <div class="banner">
+        <img src="../Arquivos de mídia/Logo -1.png" alt="Logo esquerda">
+        <h1>PEGA, MATA E COME!</h1>
+        <img src="../Arquivos de mídia/ifrn-logo.png" alt="Logo direita">
+    </div>
+    <nav>
+        <ul>
+        <li><a href="../Estrutura/page1.html">Início</a></li>
+        <li><a href="../Estrutura/page2.html">Equipe</a></li>
+        <li><a href="../Estrutura/page3.html">Jogos e Resultados</a></li>
+        <li><a href="../Estrutura/page4.html">Entre para o time</a></li>
+        </ul>
+    </nav>
     </header>
 
+            <h1>Intercampi 2026</h1>
+                <h2>Fase 1:</h2>
+                    <table border="1">
+                        <tr>
+                            <td>JOGO 1:</td>>
+                            <td>IFCM X CNAT</td>
+                            <td>(00 X 00)</td>
+                        <tr>
+                            <td>JOGO 2:</td>>
+                            <td>IFCM X IFJC</td>
+                            <td>(00 X 00)</td>
+                        </tr>
+                            <td>JOGO 3:</td>
+                            <td>IFCM X IFPF</td>
+                            <td>(00 X 00)</td>
+                        </tr>
+                            <td>RESULTADO FINAL:</td>
+                            <td>CLASSIFICADO.</td>
+                            <td>FASE 2</td>
+                    </table>
 
-        <nav>
-            <a href="../Estrutura/page1.html"><b>Início</b></a>
-            <a href="../Estrutura/page2.html"><b>Equipe</b></a>
-            <a href="../Estrutura/page3.html"><b>Jogos e Resultados</b></a>
-            <a href="../Estrutura/page4.html"><b>Entre para o time</b></a>
-        </nav>
-
-
+                <h2>Cortes e Jogos:</h2><br>
+                
+    <h1>Intercampi 2025</h1>
+                <h2>(Time cortado devido falta de verba.)</h2>
 
     <footer>
             <div>
