--- a/Estrutura/page4.html
+++ b/Estrutura/page4.html
@@ -3,23 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>page 4</title>
+    <title>Entre para o time</title>
     <link rel="stylesheet" href="../Estrutura/main.css">
     <script src="../Estrutura/server.js" defer></script>
 </head>
 <body>
         
     <header>
-        <img src="../Arquivos de mídia/Pega, mata e come!.jpg" alt="Basquete IFCM logo" width="1520" height="160">
+    <div class="banner">
+        <img src="../Arquivos de mídia/Logo -1.png" alt="Logo esquerda">
+        <h1>PEGA, MATA E COME!</h1>
+        <img src="../Arquivos de mídia/ifrn-logo.png" alt="Logo direita">
+    </div>
+    <nav>
+        <ul>
+        <li><a href="../Estrutura/page1.html">Início</a></li>
+        <li><a href="../Estrutura/page2.html">Equipe</a></li>
+        <li><a href="../Estrutura/page3.html">Jogos e Resultados</a></li>
+        <li><a href="../Estrutura/page4.html">Entre para o time</a></li>
+        </ul>
+    </nav>
     </header>
-
-
-        <nav>
-            <a href="../Estrutura/page1.html"><b>Início</b></a>
-            <a href="../Estrutura/page2.html"><b>Equipe</b></a>
-            <a href="../Estrutura/page3.html"><b>Jogos e Resultados</b></a>
-            <a href="../Estrutura/page4.html"><b>Entre para o time</b></a>
-        </nav>
 
             <h1>Faça parte desta familía!</h1>
                     <h2>Entre para o grupo do time e frequente os treinos!</h2>
